# Games101

./: .clangd  .gitignore  README.md  build.py
Ray-Tracing/: CMakeLists.txt  justfile
Ray-Tracing--v1/: README.md  build.py  justfile  main
Ray-Tracing--v1/code/: BMP.hpp  CMakeLists.txt  Vec3d.hpp  global.hpp  hittable.hpp  hittablelist.hpp  main.cpp  ray.hpp  sphere.hpp
Ray-Tracing--v1/src/: BMP.hpp  Renderer.hpp  Vec3d.hpp  Vec3dx4.hpp  camera.hpp  cameraFOV.hpp  cameraOrient.hpp  lambertian.hpp  main.cpp  main.hpp  material.hpp  ray.hpp  simd.hpp  sphere.hpp  world.hpp
Ray-Tracing--v2/: CMakeLists.txt  README.md  justfile
Ray-Tracing--v2/src/: AABB.hpp  BMP.hpp  BVH.hpp  Renderer.hpp  camera.hpp  cameraOrient.hpp  camerabase.hpp  dielectric.hpp  global.hpp  hittable.hpp  hittablelist.hpp  lambertian.hpp  main.cpp  material.hpp  metal.hpp  moving_sphere.hpp  perlin.hpp  ray_color.hpp  rtw_stb_image.hpp  simd.hpp  sphere.hpp  texture.hpp  world.hpp  xy_rect.hpp
Ray-Tracing--v3/: README.md  justfile
Ray-Tracing--v3/src/: BVH.hpp  Renderer.hpp  Vec3dx4.hpp  box.hpp  constant_medium.hpp  global.hpp  lambertian.hpp  main.cpp  moving_sphere.hpp  (+3 more)
code/: CMakeLists.txt  OBJ_Loader.hpp  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  draw.hpp  draw_triangle.cpp  main.cpp  matrix.cpp  matrix.hpp  rasterizer.cpp  rasterizer.hpp
cow/: README.md  justfile
ray-trace/: build.py
ray-trace/code/: CMakeLists.txt  Light.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
(+39 files in other folders)
